--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "core-js": "3.6.5",
     "default-passive-events": "^2.0.0",
     "element-ui": "2.13.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
+    "jszip": "^3.6.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "path-to-regexp": "^2.4.0",
