--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "screenfull": "^5.1.0",
     "vue": "2.6.10",
     "vue-router": "3.0.6",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
@@ -49,6 +50,7 @@
     "sass": "1.26.8",
     "sass-loader": "8.0.2",
     "script-ext-html-webpack-plugin": "2.1.3",
+    "script-loader": "^0.7.2",
     "serve-static": "1.13.2",
     "svg-sprite-loader": "4.1.3",
     "svgo": "1.2.2",
